# ai-testing-playground

./: .gitignore  README.md  pyproject.toml
src/deepeval/: answer_relevancy_control_case.py  answer_relevancy_test_case.py  contextual_precision_control_case.py  contextual_precision_test_case.py  faithfullness_control_case.py  faithfullness_test_case.py
src/langchain/: conversation_history_multi_prompt.py  conversation_messages_array.py  conversation_prompt_templates.py  conversation_prompt_templates_message_tuples.py  conversational_history_contradiction_sandwich_test_case.py  conversational_history_contradiction_sandwich_variance_test_case.py  conversational_history_control_case_test_case.py  conversational_history_misleading_history_test_case.py  conversational_history_test_case.py  langchain_messages.py  messages_placeholder.py  multiple_chains.py  multiple_chains_parallel_runnable.py  multiple_chains_true_parallel_runnable.py  prompt_template_with_input_types_partial_variables.py  simple_chain.py  simple_prompt.py  simple_prompt_template.py
